     had the option to use the keyed columns (if keyed) or all columns (if not). The default behaviour sets
     `by=key(dt)` to maintain backward compatibility. See man/duplicated.Rd and tests 986:991 for
     more information. Thanks to Arunkumar Srinivasan, Ricardo Saporta, and Frank Erickson for useful
     discussions.

BUG FIXES

  o  merge now properly handles data.tables with zero-rows. This was bug # 2633.
     Thank you to Vinicius Almendra for submitting it.

  o  rbind now handles data.tables and lists with non-standard and/or duplicate names.
     These were bugs # 2726 & # 2384 Thank you to Garrett See.

  o  rbind, cbind and merge on data.table should now work in packages that Import but do not
     Depend on data.table. Many thanks to a patch to .onLoad from Ken Williams, and related
     posts from Victor Kryukov :
	     http://r.789695.n4.nabble.com/Import-problem-with-data-table-in-packages-tp4665958.html

  o  Mixing adding and updating into one DT[, `:=`(existingCol=...,newCol=...), by=...] now works
     without error or segfault, #2778 and #2528. Many thanks to Arunkumar Srinivasan for reporting
     and for the nice reproducible examples. Tests added.

  o  rbindlist() now binds factor columns correctly, #2650. Thanks to Ricardo Saporta for
     reporting. Test added.

  o  Deleting a (0-length) factor column using :=NULL on an empty data.table now works, #4809. Thanks
     to Frank Pinter for reporting. Test added.
         http://stackoverflow.com/questions/18089587/error-deleting-factor-column-in-empty-data-table

  o  Writing FUN= in DT[,lapply(.SD,FUN=...),] now works, #4893. Thanks to Jan Wijffels for
     reporting and Arun for suggesting and testing a fix. Committed and test added.
         http://stackoverflow.com/questions/18314757/why-cant-i-used-fun-in-lapply-when-grouping-by-using-data-table

USER VISIBLE CHANGES

  o  := on a null data.table now gives a clearer error message :